fix: resolve gaps in legacy UI styling for UI Extensions

--- a/webapp/src/css/old-nav.less
+++ b/webapp/src/css/old-nav.less
@@ -70,7 +70,8 @@
   &.about,
   &.testing,
   &.privacy-policy,
-  &.user {
+  &.user,
+  &.ui-extensions {
     .tool-bar {
       height: 0;
     }
@@ -373,7 +374,8 @@
     &.about,
     &.testing,
     &.privacy-policy,
-    &.user {
+    &.user,
+    &.ui-extensions {
       .content {
         .page {
           top: calc(@top-navbar-height + 5px);
